--- a/frontend/src/components/bills/BillCard.scss
+++ b/frontend/src/components/bills/BillCard.scss
@@ -7,6 +7,7 @@
   border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
   padding: spaces.$spaceXL;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   row-gap: spaces.$spaceL;
@@ -36,6 +37,7 @@
 }
 
 .billCardSearchbar {
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
