--- a/frontend/src/components/searchbar/SearchbarInput.scss
+++ b/frontend/src/components/searchbar/SearchbarInput.scss
@@ -15,6 +15,8 @@ $searchbar-max-width: functions.to-rem(320px);
 $transition-duration: 0.3s;
 
 .searchbarInputContainer {
+  max-width: 60%;
+  width: fit-content;
   flex-grow: 1;
 }
 
