df-13 misc layout fixes

--- a/frontend/src/components/atoms/MoneyInput.scss
+++ b/frontend/src/components/atoms/MoneyInput.scss
@@ -19,7 +19,7 @@ $border-transition-duration: 0.1s;
   position: absolute;
   left: spaces.$spaceML;
   color: colors.$grey-300;
-  transform: translateY(50%);
+  bottom: 23%;
 
   @include fonts.text-preset-4;
 
