--- a/frontend/src/components/pots/potprogress/PotProgressDisplayHeader.scss
+++ b/frontend/src/components/pots/potprogress/PotProgressDisplayHeader.scss
@@ -1,5 +1,6 @@
 @use '../../../styles/colors';
 @use '../../../styles/fonts';
+@use '../../../styles/spaces';
 
 .potProgressDisplayHeader {
   display: flex;
@@ -15,7 +16,10 @@
 }
 
 .potProgressDisplayHeaderValue {
+  margin-left: spaces.$spaceS;
   color: colors.$grey-900;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   @include fonts.text-preset-1;
 }
