fe-37 add e2e-tests for pots

--- a/frontend/src/components/overlay/OverlayCardBox.scss
+++ b/frontend/src/components/overlay/OverlayCardBox.scss
@@ -88,6 +88,8 @@ $transition-duration: 0.1s;
   margin: 0;
   height: auto;
   flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   @include fonts.text-preset-1;
 }
