--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -113,6 +113,8 @@ $icon-filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%)
 
 .cardHeaderTitle {
   flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   @include  fonts.text-preset-2;
 
